app/assets/stylesheets/webcat_index.scss
/* ... */
.dropdown-reverse-header {
  color: #fff;
  background-color: #6ebbdb;
  margin-top: -5px;
  border-radius: 4px 0 0 0;
  font-size: 12px;
  font-weight: 600;
  padding: 2px 8px;
  margin-left: -8px;
  margin-right: -8px;
}

.internal-comment-dropdown {
  border: none;
  margin-top: -1px;
  border-radius: 4px 0 4px 4px;
  min-width: 230px;
  padding-left: 8px;
  padding-right: 8px;
  textarea {
    border: 1px solid #D7DADB;
    font-size: 10px;
    width: 100%;
    margin-top: 8px;
    margin-bottom: 6px;
    min-height: 70px;
    &::placeholder {
      font-style: italic;
    }
    &:disabled {
      cursor: not-allowed;
    }
  }
}

input:disabled {
  cursor: not-allowed !important;
}

.internal-comment-wrapper {
  display: inline-block;
  float: left;
}

table.dataTable tbody tr.submitting-entry {
  td {
    padding: 0;
    margin: 0;
    text-align: center;
    vertical-align: middle;
    background-color: #4e4e4e05;
  }
  .temp-msg {
    text-align: center;
    font-weight: 400;
    margin-bottom: 0;
    font-style: italic;
    font-size: 14px;
  }
}

.submitted-row {
  background-repeat: no-repeat;
  background-image: url(image_path('icon_check_grey.svg'));
  background-position: calc(50% - 117px) 50%;
  padding-left: 20px;

}

.sort-button {
  background-image: url(image_path('icon_sort_grey.svg'));
}

.open .sort-button {
  background-image: url(image_path('icon_sort_white.svg'));
}

#webcat-index-title {
  line-height: 12px;
  margin: 8px 0 10px 0;
  width: auto;
  display: inline-block;
}

.entry-id-row a {
  text-decoration: underline;
}

.important-flag-row {
  .is-important, .was-reviewed {
    display: inline-block;
    width: 20px;
    height: 20px;
    background-repeat: no-repeat;
  }
  .is-important {
    background-image: url(image_path('icon_important.svg'));
  }
  .was-reviewed {
    background-image: url(image_path('icon_reviewed_check.svg'));
  }
}

#sort-btn-group {
  float: left;
}
.direct-sorter {
  padding-bottom: 0;
  font-weight: 600;
  font-size: 12px;
  color: #4d4e4e;
  background-position: 0;
  padding-top: 0;
  padding-left: 18px;
}
.sort-desc {
  background-image: url(image_path('icon_sort_dec_grey.svg'));
}
.sort-asc {
  background-image: url(image_path('icon_sort_asc_grey.svg'));
}
#webcat-index-table-sort-dropdown {
  min-width: 260px;
  label {
    margin-left: 4px;
    margin-top: 7px;
  }
  .apply-button {
    margin-top: 0;
    margin-bottom: 10px;
  }
}
#webcat-index-sort-order {
  background-color: #d7dadb;
  background-position: center;
  height: 26px;
  width: 26px;
  &:hover {
    background-color: darken(#D7DADB, 10%) !important;
  }
}
.toolbar select#webcat-index-sort-select {
  float: left;
  border-color: #C7C7C7;
  border-radius: 2px;
  min-width: 130px;
  min-height: 26px;
  margin-right: 6px;
  margin-left: 4px;
}


@media (max-width: 1951px)  {
  #webcat-index-toolbar .toolbar-button-text {
    display: none !important;
  }
}

.toolbar#webcat-index-toolbar {
  background: white;
  bottom: 2px;
  box-shadow: 2px 0 10px 1px rgba(0,0,0,0.3);
  flex-direction: row;
  float: left;
  margin: 2px 0 -35px 0;
  padding: 0 0 0 20px;
  position: relative;
  width: 100%;
  z-index: 1;

  .toolbar-checkbox-wrapper {
    padding-top: 0;
    padding-left: 5px;
    font-weight: normal;
  }

  div {
    margin: 4px 3px 0 0;
  }

  .toolbar-dropdown {
    margin-top: 0 !important;
  }

  .primary-text-divider {
    margin-top: 0 !important;
  }

  .btn-group.toolbar-btn-group {
    margin: 0;
    vertical-align: baseline;
  }

  .webcat-toolbar-select-all-wrapper, .webcat-toolbar-tall-wrapper {
    background-color: #f2f2f2;
    display: block;
    height: 27px;
    line-height: 25px;
    float: none;
    margin: 0;
    padding: 0 8px;

    input {
      margin: 6px 0 0;
      vertical-align: top;
    }

    label {
      display: inline-block;
      font-weight: 400;
      height: 27px;
      margin-left: 2px;
    }
  }

  .webcat-toolbar-bulk-res {
    background-color: #255c7d !important;
    color: #fff !important;

    &:disabled {
      opacity: 0.5;
    }
  }

  .webcat-toolbar-tall-wrapper {
    height: 45px;
    line-height: 45px;
    margin: 0 0 0 3px;
    padding: 0 15px;

    input {
      margin: 16px 0 0;
    }
  }

  .webcat-manage-templates-button {
    background-color: #f2f2f2;
    padding-left: 24px;
  }

  .webcat-toolbar-push {
    margin-left: auto;
  }
}

//sticky toolbar needs extra top spacing on small screens
@media (max-width: 999px) {
  .toolbar#webcat-index-toolbar {
    margin-top: 18px;
  }
}

#webcat-index-toolbar .dropdown.open {
  background-color: transparent !important;
}

